bin_PROGRAMS = garrincha \
			   test0 \
			   test1 \
               test2 \
               test3 \
               test4 

garrincha_SOURCES = garrincha.c ../mb/util.c ../mb/mb.c
test0_SOURCES = test0.c ../mb/util.c ../mb/mb.c
test1_SOURCES = test1.c ../mb/util.c ../mb/mb.c
test2_SOURCES = test2.c ../mb/util.c ../mb/mb.c
test3_SOURCES = test3.c ../mb/util.c ../mb/mb.c
test4_SOURCES = test4.c ../mb/util.c ../mb/mb.c
				
garrincha_CFLAGS = $(GSTREAMER_CFLAGS) -I../
garrincha_LDADD = $(GSTREAMER_LIBS)
				
test0_CFLAGS = $(GSTREAMER_CFLAGS) -I../
test0_LDADD = $(GSTREAMER_LIBS)
				
test1_CFLAGS = $(GSTREAMER_CFLAGS) -I../
test1_LDADD = $(GSTREAMER_LIBS)

test2_CFLAGS = $(GSTREAMER_CFLAGS) -I../
test2_LDADD = $(GSTREAMER_LIBS)

test3_CFLAGS = $(GSTREAMER_CFLAGS) -I../
test3_LDADD = $(GSTREAMER_LIBS)

test4_CFLAGS = $(GSTREAMER_CFLAGS) -I../
test4_LDADD = $(GSTREAMER_LIBS)
