bin_PROGRAMS = garrincha \
							 test0 \
							 test1 \
               test2 \
               test3 \
               test4 

MICROMB_CFLAGS = -I$(includedir)/micromb-0.10/

MICROMB_LDFLAGS =  -lmicromb

garrincha_SOURCES = garrincha.c 
test0_SOURCES = test0.c 
test1_SOURCES = test1.c
test2_SOURCES = test2.c
test3_SOURCES = test3.c
test4_SOURCES = test4.c
				
garrincha_CFLAGS = $(GSTREAMER_CFLAGS) $(MICROMB_CFLAGS)
garrincha_LDADD = $(GSTREAMER_LIBS) $(MICROMB_LDFLAGS)

test0_CFLAGS = $(GSTREAMER_CFLAGS) $(MICROMB_CFLAGS)
test0_LDADD = $(GSTREAMER_LIBS) $(MICROMB_LDFLAGS)

test1_CFLAGS = $(GSTREAMER_CFLAGS)$(MICROMB_CFLAGS)
test1_LDADD = $(GSTREAMER_LIBS) $(MICROMB_LDFLAGS)

test2_CFLAGS = $(GSTREAMER_CFLAGS) $(MICROMB_CFLAGS)
test2_LDADD = $(GSTREAMER_LIBS) $(MICROMB_LDFLAGS)

test3_CFLAGS = $(GSTREAMER_CFLAGS) $(MICROMB_CFLAGS)
test3_LDADD = $(GSTREAMER_LIBS) $(MICROMB_LDFLAGS)

test4_CFLAGS = $(GSTREAMER_CFLAGS) $(MICROMB_CFLAGS)
test4_LDADD = $(GSTREAMER_LIBS) $(MICROMB_LDFLAGS)
